include_HEADERS = \
	libfmos.h

pkginclude_HEADERS = \
	libfmos/definitions.h \
	libfmos/error.h \
	libfmos/extern.h \
	libfmos/features.h \
	libfmos/types.h

EXTRA_DIST = \
	libfmos.h.in \
	libfmos/definitions.h.in \
	libfmos/features.h.in \
	libfmos/types.h.in

DISTCLEANFILES = \
	libfmos.h \
	libfmos/definitions.h \
	libfmos/features.h \
	libfmos/types.h \
	Makefile \
	Makefile.in

