MSVSCPP_FILES = \
	fmos_test_adc/fmos_test_adc.vcproj \
	fmos_test_error/fmos_test_error.vcproj \
	fmos_test_lzfse/fmos_test_lzfse.vcproj \
	fmos_test_lzfse_bit_stream/fmos_test_lzfse_bit_stream.vcproj \
	fmos_test_lzfse_decoder/fmos_test_lzfse_decoder.vcproj \
	fmos_test_lzvn/fmos_test_lzvn.vcproj \
	fmos_test_notify/fmos_test_notify.vcproj \
	fmos_test_support/fmos_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfmos/libfmos.vcproj \
	pyfmos/pyfmos.vcproj \
	libfmos.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

